tests/invalid/fp_dup_bug.err_exp2
fp_dup_bug.m:048: Error: [38;5;203mduplicate `:- pragma foreign_proc' declaration[39;49m for
fp_dup_bug.m:048:   this mode of predicate `foo'/2 in Java.
fp_dup_bug.m:042:   The first one was here.
fp_dup_bug.m:054: Error: [38;5;203mduplicate `:- pragma foreign_proc' declaration[39;49m for
fp_dup_bug.m:054:   this mode of predicate `foo'/2 in Java.
fp_dup_bug.m:042:   The first one was here.
